💄 Setup base styles (reset, typography, etc)

--- a/src/style/style.sass
+++ b/src/style/style.sass
@@ -1,8 +1,13 @@
 // Ambience
+@import "ambience/colors"
 @import "ambience/fonts"
 @import "ambience/spaces"
 @import "ambience/typography"
 
 // Base
+@import "base/reset"
+@import "base/responsive"
+@import "base/typography"
+@import "base/unclassed"
 
 // Components
