--- a/style/style.css
+++ b/style/style.css
@@ -1,2 +1,131 @@
 @import url("https://fonts.googleapis.com/css?family=Roboto:300,300i,400,400i,500,500i,700,700i");
 @import url("https://fonts.googleapis.com/css?family=Raleway:300,300i,400,400i,500,500i,600,600i,700,700i");
+* {
+  margin: 0;
+  padding: 0;
+  list-style: none;
+  color: inherit;
+  text-decoration: none;
+  font-weight: 400;
+  font-size: inherit;
+  appearance: none;
+  border: none;
+  outline: none;
+  background: none;
+}
+
+*:focus {
+  outline: none;
+}
+
+html {
+  font-variant-numeric: oldstyle-nums;
+  font-feature-settings: "liga1" on;
+  font-family: "Roboto", Helvetica, sans-serif;
+}
+
+html,
+p,
+li,
+blockquote,
+pre {
+  font-size: 1.2rem;
+  line-height: 2rem;
+}
+
+@media (min-width: 961px) {
+  html,
+  p,
+  li,
+  blockquote,
+  pre {
+    font-size: 1.5rem;
+    line-height: 3rem;
+  }
+}
+
+h1,
+h2,
+h3 {
+  font-weight: 700;
+  font-family: "Raleway", Helvetica, monospace;
+}
+
+h1 {
+  line-height: 3.5rem;
+  font-size: 2.8rem;
+}
+
+@media (min-width: 961px) {
+  h1 {
+    line-height: 5rem;
+    font-size: 4.1rem;
+  }
+}
+
+* + h1 {
+  margin-top: 7rem;
+}
+
+h2 {
+  line-height: 2.5rem;
+  font-size: 2rem;
+}
+
+@media (min-width: 961px) {
+  h2 {
+    line-height: 3.5rem;
+    font-size: 2.8rem;
+  }
+}
+
+* + h2 {
+  margin-top: 3rem;
+}
+
+h3 {
+  line-height: 2rem;
+  font-size: 1.5rem;
+}
+
+@media (min-width: 961px) {
+  h3 {
+    line-height: 3rem;
+    font-size: 2rem;
+  }
+}
+
+* + h3 {
+  margin-top: 2rem;
+}
+
+::selection {
+  background-color: rgba(255, 192, 203, 0.4);
+}
+
+html {
+  font-size: 16px;
+  font-weight: 400;
+  height: 100%;
+  text-rendering: optimizeLegibility;
+  -webkit-font-smoothing: antialiased;
+}
+
+* {
+  box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+}
+
+button {
+  cursor: pointer;
+}
+
+* + * {
+  margin-top: 1rem;
+}
+
+body,
+body > * {
+  margin: 0;
+}
