💄 Create style files for components

--- a/src/style/base/_structure.sass
+++ b/src/style/base/_structure.sass
@@ -6,10 +6,12 @@ body > main
 
 .section-purchase,
 .section-followup
-  padding: $space-base
+  padding: $space-centi $space-base
   display: flex
   flex-direction: column
   align-items: center
   justify-content: center
+  min-height: 100%
+  margin: 0
   +media-mediumup
     width: 50%
