--- a/src/style/style.sass
+++ b/src/style/style.sass
@@ -12,3 +12,7 @@
 @import "base/structure"
 
 // Components
+@import "components/coin-item"
+@import "components/coin-list"
+@import "components/section-followup"
+@import "components/section-purchase"
