💄 Style most components (WIP)

--- a/src/style/ambience/_typography.sass
+++ b/src/style/ambience/_typography.sass
@@ -9,6 +9,7 @@ $font-size-base: 1.5rem
 $font-size-deci: 1.2rem
 $font-size-centi: 1rem
 $font-size-mili: 0.9rem
+$font-size-micro: 0.7rem
 
 $line-height-kilo: 5rem
 $line-height-hecto: 4rem
