--- a/src/style/components/_coin-list.sass
+++ b/src/style/components/_coin-list.sass
@@ -1,2 +1,7 @@
 .coin-list
-  background-color: gold
+  background-color: #fff
+  padding-top: $space-mili
+  padding-bottom: $space-mili
+  width: 32rem
+  max-width: 100%
+  box-shadow: 0 4px 12px rgba(#000, 0.2)
