--- a/src/style/style.sass
+++ b/src/style/style.sass
@@ -12,6 +12,7 @@
 @import "base/structure"
 
 // Components
+@import "components/cw-button"
 @import "components/coin-item"
 @import "components/coin-list"
 @import "components/section-followup"
