--- a/src/view/index.slim
+++ b/src/view/index.slim
@@ -18,20 +18,20 @@ html
     main
 
       section.section-purchase
-        h1 Buy some
-        h4 Chose a cryptocurrency to buy
+        h1.title Buy some
+        h5 Chose a cryptocurrency to buy
         select
           option Rolecoin
           option Bitcoin
           option Memecoin
           option 9coin
-        h4 How much? (in USD)
+        h5 How much? (in USD)
         input type="text" placeholder="0.00"
-        h3 That will give you <em>0.00</em> Rolecoins.
-        button Purchase
+        h4 That will give you <em>0.00</em> Rolecoins.
+        button.cw-button Purchase
 
       section.section-followup
-        h1 Follow up
+        h1.title Follow up
         ul.coin-list
           li.coin-item.-head
             .name Cryptocurrency
