--- a/src/style/ambience/_colors.sass
+++ b/src/style/ambience/_colors.sass
@@ -1,1 +1,8 @@
-$color-selection: pink
+$color-blue: #36c
+$color-red: #c36
+$color-green: #3c6
+
+$color-selection: $color-blue
+
+$color-positive: $color-green
+$color-negative: $color-red
