--- a/src/style/base/_structure.sass
+++ b/src/style/base/_structure.sass
@@ -11,7 +11,9 @@ body > main
   flex-direction: column
   align-items: center
   justify-content: center
-  min-height: 100%
   margin: 0
+  padding: $space-hecto $space-centi
   +media-mediumup
+    padding: $space-deci
+    min-height: 100%
     width: 50%
