--- a/src/style/components/_section-followup.sass
+++ b/src/style/components/_section-followup.sass
@@ -1,2 +1,9 @@
 .section-followup
-  background-color: red
+  $color-background: hsl(0, 0, 95%) 
+  $color-text: hsl(0, 0, 10%) 
+  $color-title: hsl(0, 0, 75%) 
+  overflow: hidden
+  background-color: $color-background
+  color: $color-text
+  > .title
+    color: $color-title
