--- a/src/style/components/_section-purchase.sass
+++ b/src/style/components/_section-purchase.sass
@@ -1,2 +1,8 @@
 .section-purchase
-  background-color: green
+  $color-background: hsl(0, 0, 5%) 
+  $color-text: hsl(0, 0, 85%) 
+  $color-title: hsl(0, 0, 15%) 
+  background-color: $color-background
+  color: $color-text
+  > .title
+    color: $color-title
