🔨💄 Extract section styles to reusables

--- a/src/style/base/_structure.sass
+++ b/src/style/base/_structure.sass
@@ -4,8 +4,7 @@ body > main
   +media-mediumup
     flex-direction: row
 
-.section-purchase,
-.section-followup
+body > main > section
   padding: $space-centi $space-base
   display: flex
   flex-direction: column
