--- a/src/style/style.sass
+++ b/src/style/style.sass
@@ -10,10 +10,11 @@
 @import "base/typography"
 @import "base/unclassed"
 @import "base/structure"
+@import "base/reusables"
 
 // Components
 @import "components/cw-button"
 @import "components/coin-item"
 @import "components/coin-list"
-@import "components/section-followup"
+@import "components/section-marketcap"
 @import "components/section-purchase"
