--- a/src/view/index.slim
+++ b/src/view/index.slim
@@ -18,7 +18,7 @@ html
     main
 
       section.section-purchase
-        h1.title Buy some
+        h1.title Buy Cryptocoins
         h5 Chose a cryptocurrency to buy
         select
           option Rolecoin
@@ -30,8 +30,8 @@ html
         h4 That will give you <em>0.00</em> Rolecoins.
         button.cw-button Purchase
 
-      section.section-followup
-        h1.title Follow up
+      section.section-marketcap
+        h1.title Market Capitalizations
         ul.coin-list
           li.coin-item.-head
             .name Cryptocurrency
