--- a/src/style/components/_section-purchase.sass
+++ b/src/style/components/_section-purchase.sass
@@ -2,7 +2,4 @@
   $color-background: hsl(0, 0, 5%) 
   $color-text: hsl(0, 0, 85%) 
   $color-title: hsl(0, 0, 15%) 
-  background-color: $color-background
-  color: $color-text
-  > .title
-    color: $color-title
+  +section-colors($color-background, $color-text, $color-title)
