BB Branding (WIP)

--- a/src/style/ambience/_colors.sass
+++ b/src/style/ambience/_colors.sass
@@ -1,8 +1,14 @@
+$color-bb-blue: #215297;
+$color-bb-yellow: #F8D117;
+
 $color-blue: #36c
 $color-red: #c36
 $color-green: #3c6
 
-$color-selection: $color-blue
+$color-selection: $color-bb-blue
 
 $color-positive: $color-green
 $color-negative: $color-red
+
+$color-brand-dark: $color-bb-blue
+$color-brand-light: $color-bb-yellow
