--- a/src/style/ambience/_typography.sass
+++ b/src/style/ambience/_typography.sass
@@ -1,5 +1,5 @@
-$font-family-body: 'Roboto', Helvetica, sans-serif
-$font-family-headings: 'Raleway', Helvetica, monospace
+$font-family-body: 'Helvetica Neue', Helvetica, sans-serif
+$font-family-headings: 'Helvetica Neue', Helvetica, monospace
 
 $font-size-mega: 7.5rem
 $font-size-kilo: 4.1rem
@@ -11,10 +11,10 @@ $font-size-centi: 1rem
 $font-size-mili: 0.9rem
 $font-size-micro: 0.7rem
 
-$line-height-kilo: 5rem
-$line-height-hecto: 4rem
-$line-height-deca: 3.5rem
-$line-height-base: 3rem
-$line-height-deci: 2.5rem
-$line-height-centi: 2rem
-$line-height-mili: 1.5rem
+$line-height-kilo: 4.5rem
+$line-height-hecto: 3.5rem
+$line-height-deca: 3rem
+$line-height-base: 2.5rem
+$line-height-deci: 2rem
+$line-height-centi: 1.5rem
+$line-height-mili: 1rem
