--- a/src/style/base/_typography.sass
+++ b/src/style/base/_typography.sass
@@ -23,10 +23,10 @@ h5
   font-family: $font-family-headings
 
 h1
-  line-height: $line-height-deca
+  line-height: $line-height-base
   font-size: $font-size-hecto
   +media-mediumup
-    line-height: $line-height-kilo
+    line-height: $line-height-hecto
     font-size: $font-size-kilo
   * + &
     margin-top: $space-kilo
