--- a/src/style/components/_section-marketcap.sass
+++ b/src/style/components/_section-marketcap.sass
@@ -1,5 +1,5 @@
 .section-marketcap
-  $color-background: hsl(0, 0, 95%) 
-  $color-text: hsl(0, 0, 10%) 
-  $color-title: hsl(0, 0, 80%) 
+  $color-background: $color-brand-dark
+  $color-text: #fff
+  $color-title: $color-brand-light
   +section-colors($color-background, $color-text, $color-title)
