--- a/src/style/components/_section-purchase.sass
+++ b/src/style/components/_section-purchase.sass
@@ -1,5 +1,5 @@
 .section-purchase
-  $color-background: hsl(0, 0, 5%) 
-  $color-text: hsl(0, 0, 85%) 
-  $color-title: hsl(0, 0, 15%) 
+  $color-background: #fff
+  $color-text: #000
+  $color-title: $color-brand-dark
   +section-colors($color-background, $color-text, $color-title)
