--- a/src/style/style.sass
+++ b/src/style/style.sass
@@ -1,6 +1,5 @@
 // Ambience
 @import "ambience/colors"
-@import "ambience/fonts"
 @import "ambience/spaces"
 @import "ambience/typography"
 
@@ -14,6 +13,7 @@
 
 // Components
 @import "components/cw-button"
+@import "components/cw-header"
 @import "components/coin-item"
 @import "components/coin-list"
 @import "components/section-marketcap"
