--- a/src/view/index.slim
+++ b/src/view/index.slim
@@ -15,41 +15,47 @@ html
 
   body
 
+    header.cw-header
+      .logo
+      .profile
+        .name
+        .avatar
+
     main
 
       section.section-purchase
-        h1.title Buy Cryptocoins
-        h5 Chose a cryptocurrency to buy
+        h1.title Compre
+        h5 Escolha uma criptomoeda para comprar
         select
           option Rolecoin
           option Bitcoin
           option Memecoin
           option 9coin
-        h5 How much? (in USD)
+        h5 Quanto? (em R$)
         input type="text" placeholder="0.00"
-        h4 That will give you <em>0.00</em> Rolecoins.
-        button.cw-button Purchase
+        h4 <em>0.00</em> Rolecoins.
+        button.cw-button Comprar
 
       section.section-marketcap
-        h1.title Market Capitalizations
+        h1.title Acompanhe
         ul.coin-list
           li.coin-item.-head
-            .name Cryptocurrency
-            .price Price (in USD)
-            .change Change (24h)
+            .name Criptomoeda
+            .price Preço (em R$)
+            .change Variação (24h)
           li.coin-item
             .name Rolecoin
-            .price 7543.02
+            .price 23543.02
             .change.-positive 1.45%
           li.coin-item
             .name Bitcoin
-            .price 6673.67
+            .price 17673.67
             .change.-positive 12.13%
           li.coin-item
             .name Memecoin
-            .price 1310.73
+            .price 3310.73
             .change.-negative -5.44%
           li.coin-item
             .name 9coin
-            .price 61.26
+            .price 161.26
             .change.-positive 3.02%
