--- a/style/style.css
+++ b/style/style.css
@@ -1,5 +1,3 @@
-@import url("https://fonts.googleapis.com/css?family=Roboto:300,300i,400,400i,500,500i,700,700i");
-@import url("https://fonts.googleapis.com/css?family=Raleway:300,300i,400,400i,500,500i,600,600i,700,700i");
 * {
   margin: 0;
   padding: 0;
@@ -21,7 +19,7 @@
 html {
   font-variant-numeric: oldstyle-nums;
   font-feature-settings: "liga1" on;
-  font-family: "Roboto", Helvetica, sans-serif;
+  font-family: "Helvetica Neue", Helvetica, sans-serif;
 }
 
 html,
@@ -30,7 +28,7 @@ li,
 blockquote,
 pre {
   font-size: 1.2rem;
-  line-height: 2rem;
+  line-height: 1.5rem;
 }
 
 @media (min-width: 961px) {
@@ -40,7 +38,7 @@ pre {
   blockquote,
   pre {
     font-size: 1.5rem;
-    line-height: 3rem;
+    line-height: 2.5rem;
   }
 }
 
@@ -50,17 +48,17 @@ h3,
 h4,
 h5 {
   font-weight: 700;
-  font-family: "Raleway", Helvetica, monospace;
+  font-family: "Helvetica Neue", Helvetica, monospace;
 }
 
 h1 {
-  line-height: 3.5rem;
+  line-height: 2.5rem;
   font-size: 2.8rem;
 }
 
 @media (min-width: 961px) {
   h1 {
-    line-height: 5rem;
+    line-height: 3.5rem;
     font-size: 4.1rem;
   }
 }
@@ -70,13 +68,13 @@ h1 {
 }
 
 h2 {
-  line-height: 2.5rem;
+  line-height: 2rem;
   font-size: 2rem;
 }
 
 @media (min-width: 961px) {
   h2 {
-    line-height: 3.5rem;
+    line-height: 3rem;
     font-size: 2.8rem;
   }
 }
@@ -86,13 +84,13 @@ h2 {
 }
 
 h3 {
-  line-height: 2rem;
+  line-height: 1.5rem;
   font-size: 1.5rem;
 }
 
 @media (min-width: 961px) {
   h3 {
-    line-height: 3rem;
+    line-height: 2.5rem;
     font-size: 2rem;
   }
 }
@@ -102,13 +100,13 @@ h3 {
 }
 
 h4 {
-  line-height: 2rem;
+  line-height: 1.5rem;
   font-size: 1rem;
 }
 
 @media (min-width: 961px) {
   h4 {
-    line-height: 3rem;
+    line-height: 2.5rem;
     font-size: 1.5rem;
   }
 }
@@ -119,13 +117,13 @@ h4 {
 
 h5 {
   font-weight: 500;
-  line-height: 1.5rem;
+  line-height: 1rem;
   font-size: 0.9rem;
 }
 
 @media (min-width: 961px) {
   h5 {
-    line-height: 2rem;
+    line-height: 1.5rem;
     font-size: 1rem;
   }
 }
@@ -135,7 +133,7 @@ h5 {
 }
 
 ::selection {
-  background-color: #36c;
+  background-color: #215297;
 }
 
 html {
@@ -186,34 +184,36 @@ body > main > section {
   padding: 4.5rem 1rem;
 }
 
+body > main > section > .title {
+  margin-bottom: 2rem;
+}
+
 @media (min-width: 961px) {
   body > main > section {
     padding: 1.5rem;
-    min-height: 100%;
+    min-height: calc(100% - 4.5rem);
     width: 50%;
   }
 }
 
 .cw-button {
-  padding: 1rem;
-  background-color: #f2f2f2;
-  color: #000;
+  padding: 1rem 2rem;
+  background-color: #215297;
+  color: #fff;
   border-radius: 4px;
-  box-shadow: 0 4px 12px rgba(0, 0, 0, 0.2);
   font-weight: 700;
   font-size: 0.9rem;
   text-transform: uppercase;
   letter-spacing: 0.06em;
   transition: all 0.1s ease;
+  border-bottom: 2px solid #1e4a88;
 }
 
 .cw-button:hover {
-  transform: translateY(-2px);
-  background-color: #fff;
+  background-color: #1e4a88;
 }
 
 .cw-button:active {
-  transform: translateY(0);
   opacity: 0.8;
 }
 
@@ -222,6 +222,15 @@ body > main > section {
     font-size: 1rem;
     padding: 1rem 1.5rem;
   }
+}
+
+.cw-header {
+  height: 4.5rem;
+  background-color: gold;
+}
+
+.cw-header * {
+  margin: 0;
 }
 
 .coin-item {
@@ -238,13 +247,13 @@ body > main > section {
 .coin-item > * {
   width: calc(100% / 3);
   margin: 0;
-  line-height: 1.5rem;
+  line-height: 1rem;
   font-size: 0.9rem;
 }
 
 @media (min-width: 961px) {
   .coin-item > * {
-    line-height: 2rem;
+    line-height: 1.5rem;
     font-size: 1rem;
   }
 }
@@ -265,7 +274,7 @@ body > main > section {
 }
 
 .coin-item.-head > * {
-  line-height: 1.5rem;
+  line-height: 1rem;
   font-size: 0.7rem;
   font-weight: 600;
   text-transform: uppercase;
@@ -279,26 +288,27 @@ body > main > section {
   width: 32rem;
   max-width: 100%;
   box-shadow: 0 4px 12px rgba(0, 0, 0, 0.2);
+  color: #000;
 }
 
 .section-marketcap {
   overflow: hidden;
-  background-color: #f2f2f2;
-  color: #1a1a1a;
+  background-color: #215297;
+  color: #fff;
   text-align: center;
 }
 
 .section-marketcap > .title {
-  color: #cccccc;
+  color: #F8D117;
 }
 
 .section-purchase {
   overflow: hidden;
-  background-color: #0d0d0d;
-  color: #d9d9d9;
+  background-color: #fff;
+  color: #000;
   text-align: center;
 }
 
 .section-purchase > .title {
-  color: #262626;
+  color: #215297;
 }
