--- a/src/view/index.slim
+++ b/src/view/index.slim
@@ -9,7 +9,13 @@ html
     meta name="keywords" content="Cryptocurrency"
     meta name="viewport" content="width=device-width, initial-scale=1.0"
     meta name="referrer" content="origin"
-    link rel="icon" type="image/png" href="./images/favicon.png"
+    link rel="apple-touch-icon" sizes="180x180" href="assets/favicon/apple-touch-icon.png"
+    link rel="icon" type="image/png" sizes="32x32" href="assets/favicon/favicon-32x32.png"
+    link rel="icon" type="image/png" sizes="16x16" href="assets/favicon/favicon-16x16.png"
+    link rel="manifest" href="assets/favicon/manifest.json"
+    link rel="mask-icon" href="assets/favicon/safari-pinned-tab.svg" color="#215297"
+    meta name="theme-color" content="#ffffff"
+
 
     link href="./style/style.css" rel="stylesheet" type='text/css'
 
