--- a/src/style/ambience/_colors.sass
+++ b/src/style/ambience/_colors.sass
@@ -2,10 +2,10 @@ $color-bb-blue: #215297;
 $color-bb-yellow: #F8D117;
 
 $color-blue: #36c
-$color-red: #c36
-$color-green: #3c6
+$color-red: #c24
+$color-green: #2b5
 
-$color-selection: $color-bb-blue
+$color-selection: $color-bb-yellow
 
 $color-positive: $color-green
 $color-negative: $color-red
