--- a/src/style/style.sass
+++ b/src/style/style.sass
@@ -18,3 +18,4 @@
 @import "components/coin-list"
 @import "components/section-marketcap"
 @import "components/section-purchase"
+@import "components/input-box"
