--- a/src/style/components/_section-purchase.sass
+++ b/src/style/components/_section-purchase.sass
@@ -3,3 +3,11 @@
   $color-text: #000
   $color-title: $color-brand-dark
   +section-colors($color-background, $color-text, $color-title)
+
+  > .select
+
+    text-indent: 1rem
+    border-radius: 4px
+    background-color: rgba(#000, 0.03)
+    height: 3rem
+    width: 12rem
