🐛 Fix Safari default select style

--- a/src/style/components/_section-purchase.sass
+++ b/src/style/components/_section-purchase.sass
@@ -5,7 +5,7 @@
   +section-colors($color-background, $color-text, $color-title)
 
   > .select
-
+    -webkit-appearance: none
     text-indent: 1rem
     border-radius: 4px
     background-color: rgba(#000, 0.03)
